# inventory

./: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 2025_09_02_0001_init.py  24cdd204c198_models_with_mixins_aligned.py  393826f10a44_auth_tables.py
app/: main.py
app/api/: deps.py
app/api/routers/: __init__.py  auth.py  inventory.py  locations.py  products.py  purchase_orders.py
app/core/: config.py  security.py
app/db/: session.py
app/errors/: __init__.py
app/models/: __init__.py  inventory.py  location.py  mixins.py  partners.py  product.py  purchase.py  user.py
app/schemas/: common.py  inventory.py  location.py  product.py  purchase.py  user.py
app/services/: inventory.py
app/tests/: conftest.py  test_products.py  test_registration.py
